# osa_cli_releases

./: .gitignore  .travis.yml  release-lib.py  releasing.sh  setup.cfg  tox.ini
osa_cli_releases/: cli.py  click.py  releasing.py
tests/: test_include.py  test_releasing.py
tests/fixtures/: global-requirements-pins.txt
