[metadata]
name = osa_cli_releases
version = 0.1alpha1
description = Release toolkit for OpenStack-Ansible
long_description = file: README.rst
author = Jean-Philippe Evrard
author_email = jean-philippe@evrard.me
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = osa_cli_releases
install_requires =
    dulwich
    requests
    requirements-parser
    prettytable
    pyyaml
    ruamel.yaml
    setuptools>=30.3

[options.entry_points]
console_scripts =
    analyse-global-requirements-pins = osa_cli_releases.cli:analyse_global_requirement_pins
    bump-upstream-repos-shas = osa_cli_releases.cli:bump_upstream_repos_shas
    bump-ansible-role-requirements = osa_cli_releases.cli:bump_arr
    freeze-ansible-role-requirements = osa_cli_releases.cli:bump_arr

osa_cli.plugins =
    releases = osa_cli_releases.click:releases
